Attempt to fix IE bug causing schedule not to be visible at all...

--- a/partial/schedule/schedule.less
+++ b/partial/schedule/schedule.less
@@ -171,9 +171,7 @@
     transform: translateX(0) translateY(0);
     transition: opacity .3s ease-in-out, transform .2s ease-out;
   }
-  
   .io-Session {
-    opacity: 0;
     -webkit-animation: fade-in .3s ease-in forwards;
             animation: fade-in .3s ease-in forwards;
   }
